# docs/swagger.json
@@ -9,30 +9,27 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/ping": {
+        "/job/is-running": {
             "get": {
-                "description": "Ping",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Check if a job is currently running",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Ping"
+                    "Scan"
                 ],
-                "summary": "Ping",
+                "summary": "Is Running",
                 "responses": {
                     "200": {
-                        "description": "pong",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "type": "boolean"
                         }
                     }
                 }
             }
         },
-        "/scan/job-name": {
+        "/job/job-name": {
             "get": {
                 "description": "Get the name of the last / current job",
                 "produces": [
@@ -52,7 +49,7 @@
                 }
             }
         },
-        "/scan/logs": {
+        "/job/logs": {
             "get": {
                 "description": "Get the logs of the last / current job",
                 "produces": [
@@ -70,6 +67,52 @@
                             "items": {
                                 "$ref": "#/definitions/controllers.jobLogResponse"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/job/pop-logs": {
+            "get": {
+                "description": "Get the logs of the last / current job",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Scan"
+                ],
+                "summary": "Get Job Logs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/controllers.jobLogResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/ping": {
+            "get": {
+                "description": "Ping",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Ping"
+                ],
+                "summary": "Ping",
+                "responses": {
+                    "200": {
+                        "description": "pong",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -96,29 +139,6 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/controllers.errorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/scan/pop-logs": {
-            "get": {
-                "description": "Get the logs of the last / current job",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Scan"
-                ],
-                "summary": "Get Job Logs",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/controllers.jobLogResponse"
-                            }
                         }
                     }
                 }
@@ -253,7 +273,7 @@
             "properties": {
                 "date": {
                     "type": "string",
-                    "example": "2021-01-01"
+                    "example": "2021-01-01 12:00:00"
                 },
                 "job_name": {
                     "type": "string",
