# internal/controllers/scan.go
@@ -2,11 +2,8 @@ package controllers
 
 import (
 	"github.com/bingemate/media-indexer/internal/features"
-	"github.com/bingemate/media-indexer/pkg"
 	"github.com/gin-gonic/gin"
 )
-
-type jobLogResponse pkg.JobLog
 
 func InitScanController(engine *gin.RouterGroup, movieScanner *features.MovieScanner, tvScanner *features.TVScanner) {
 	engine.POST("/movie", func(c *gin.Context) {
@@ -14,15 +11,6 @@ func InitScanController(engine *gin.RouterGroup, movieScanner *features.MovieSca
 	})
 	engine.POST("/tv", func(c *gin.Context) {
 		scanTvShow(c, tvScanner)
-	})
-	engine.GET("/pop-logs", func(c *gin.Context) {
-		popJobLogs(c)
-	})
-	engine.GET("/logs", func(c *gin.Context) {
-		getJobLogs(c)
-	})
-	engine.GET("/job-name", func(c *gin.Context) {
-		getJobName(c)
 	})
 }
 
@@ -60,34 +48,4 @@ func scanTvShow(c *gin.Context, tvScanner *features.TVScanner) {
 		return
 	}
 	c.JSON(200, "Scan started")
-}
-
-// @Summary		Get Job Logs
-// @Description	Get the logs of the last / current job
-// @Tags			Scan
-// @Produce		json
-// @Success		200	{array} jobLogResponse
-// @Router			/scan/pop-logs [get]
-func popJobLogs(c *gin.Context) {
-	c.JSON(200, pkg.PopJobLogs())
-}
-
-// @Summary		Get Job Logs
-// @Description	Get the logs of the last / current job
-// @Tags			Scan
-// @Produce		json
-// @Success		200	{array} jobLogResponse
-// @Router			/scan/logs [get]
-func getJobLogs(c *gin.Context) {
-	c.JSON(200, pkg.GetJobLogs())
-}
-
-// @Summary		Get Job Name
-// @Description	Get the name of the last / current job
-// @Tags			Scan
-// @Produce		json
-// @Success		200	{string} string
-// @Router			/scan/job-name [get]
-func getJobName(c *gin.Context) {
-	c.JSON(200, pkg.GetJobName())
 }
